client/public/css/slider.css
body {
  background-color: white;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

.wrap {
  margin: 0 auto;
  width: 450px;
}

.slider-container {
  width: 100%;
  overflow-x: visible;
  overflow-y: visible;
}

#range {
  -webkit-appearance: none;
  appearance: none;
  margin: 0;
  padding: 0;
  position: relative;
  width: 100%;
  top: 50px;
  opacity: 0;
  color: gold;
  background-color: gold;
}
#range::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 40px;
  height: 50px;
  background: #ccc;
  cursor: pointer;
}
#range::-moz-range-thumb {
  width: 40px;
  height: 50px;
  background: #ccc;
  cursor: pointer;
}

#value {
  font-family: sans-serif;
  color: gold;
}

svg#slider{
  display: block;
  margin:auto;
}

path#curve{
  display: block;
  position: relative;
  left:30%;
  overflow: auto;
  overflow-x: visible;
  overflow-y: visible;
}

div#value{
  text-align: center;
}

